Miglioramenti UI/UX sistema clienti
- Aggiunti button azioni (Appuntamento, Elimina) nelle tabelle clienti
- Migliorato design button Appuntamento con stile nero e font Courier New
- Implementato button reset filtri (👥) per mostrare tutti i clienti
- Corretti permessi Apache e file .htaccess per accesso localhost
- Aggiunto popup client-detail.php per gestione appuntamenti
- Migliorato responsive design per button azioni
- Disabilitato rate limiting per sviluppo

--- a/.htaccess
+++ b/.htaccess
@@ -11,17 +11,8 @@
 </FilesMatch>
 
 # Blocca accesso a directory di configurazione
-<Directory "config">
-    Require all denied
-</Directory>
-
-<Directory "includes">
-    Require all denied
-</Directory>
-
-<Directory "views">
-    Require all denied
-</Directory>
+# Nota: Le direttive Directory non sono permesse in .htaccess
+# Queste protezioni sono gestite nel virtual host Apache
 
 # Headers di sicurezza
 <IfModule mod_headers.c>
